docs/main.css
/* ... */
.overlay > a.cta.secondary {
	--pf-cta--Color--hover:var(--pf-broadcasted--text, #3c3f42);
}

.band.dark a.cta.secondary,
.band.accent a.cta.secondary {
  --pf-broadcasted--link--hover: black;
  --pf-cta--Color: white;
  --pf-cta--BorderColor: white;
  --pf-cta--BackgroundColor--hover: var(--pf-theme--color--surface--lighter, #f0f0f0);
  --pf-cta--BorderColor--hover: var(--pf-theme--color--surface--lighter, #f0f0f0);
  --pf-cta--Color--hover: black;
  --pf-cta--BackgroundColor--focus: var(--pf-theme--color--surface--lightest, #fff);
  --pf-cta--BorderColor--focus: var(--pf-theme--color--surface--lightest, #fff);
  --pf-cta--Color--focus: black;
  --pf-cta__inner--BorderColor--focus: var(--pf-theme--color--surface--darkest, #151515);
  --pf-cta__inner--BorderColor--focus: var(--pf-theme--color--surface--darkest, #151515);
}

.band.dark a.cta:not(.primary):not(.secondary) {
  --pf-broadcasted--link: var(--pf-theme--color--link--on-dark, #73bcf7);
}

a.cta.primary:focus {
  --pf-cta--BackgroundColor: var(--pf-cta--BackgroundColor--focus, rgba(40, 151, 240, 0.2));
  border-color: var(--pf-cta--BorderColor--focus, transparent);
  color: var(--pf-cta--Color--focus, var(--pf-broadcasted--link--focus, #004080));
  --pf-cta--TextDecoration: var(--pf-cta--TextDecoration--focus, none);
  --pf-cta__inner--BorderColor: var(--pf-cta__inner--BorderColor--focus, transparent);
}

a.cta:hover {
  --pf-cta--BackgroundColor: var(--pf-cta--BackgroundColor--hover, transparent);
  border-color: var(--pf-cta--BorderColor--hover, transparent);
  color: var(--pf-cta--Color--hover, var(--pf-broadcasted--link--hover, #004080));
  --pf-cta--TextDecoration: var(--pf-cta--TextDecoration--hover, none);
  --pf-cta__inner--BorderColor: var(--pf-cta__inner--BorderColor--hover, transparent);
  --pf-cta__arrow--Padding: 0 0 0 6px;
}

header.band h1 {
  margin: 0;
}

.band > h2[id]:not(.no-header-styles) {
  font-size: 1.5rem;
  line-height: 1.9375rem;
  margin-top: 2em;
}

.band > h3[id] {
  font-size: 1.3rem;
  margin-top: 2em;
}

.band > h2 + h3[id],
.band > p + h3[id] {
  margin-top: 0;
}

.band > h1+p,
.band > h2+p,
.band > h3+p,
.band > h4+p {
  margin-top: 0;
}

.example-preview:not(pf-*) {
  padding: var(--pf-global--spacer--md, 1rem);
  background-color: var(--pf-global--BackgroundColor--100, #fff);
  border-bottom: var(--pf-global--BorderWidth--sm, 1px) solid var(--pf-global--BorderColor--300, #f0f0f0);
  transition: width .2s ease-in-out;
}

main.basic,
main.blog {
  margin-top: 6.5rem;
  margin-bottom: 3.75rem;
  flex-grow: 1;
  background-color:
  var(
    --pf-c-page__main-section--BackgroundColor,
    var(
      --pf-c-page__main-section--m-light-100--BackgroundColor,
      var(--pf-global--BackgroundColor--150, #fafafa)));
}

#home-title img {
  width: 6rem;
  display: block;
  margin: auto;
}

.tagline {
  font-size: 18px;
}

.header-ctas {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.header-ctas .cta:first-child {
  margin-bottom: 16px;
}

.header-ctas .cta a {
  min-width: 250px;
}

.framework-logos img {
  width: 125px;
  margin: 8px;
}

.framework-logos img.react-logo {
  width: 200px;
}

.header-bar {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 300;
}

.pf-bar {
  display: flex;
  flex-direction: row;
  gap: 1rem;
  align-items: center;
  justify-content: flex-end;
  padding-inline-start: var(--pf-c-masthead--PaddingLeft, var(--pf-c-masthead--inset, 24px));
  padding-inline-end: var(--pf-c-masthead--PaddingLeft, var(--pf-c-masthead--inset, 24px));
  height: 2.125rem;
  font-size: 0.875rem;
  background: var(--pf-c-masthead--BackgroundColor, var(--pf-global--BackgroundColor--dark-100, #151515));
  color: var(--pf-theme--color--white, #fff);
}

.pf-bar a {
  font-size: 0.875rem;
  color: var(--pf-theme--color--white, #fff);
}

.pf-bar a.cta {
  display: flex;
  align-items: center;
  gap: 0.25rem;
  padding: 0;
  height: 100%;
}

.pf-bar a:hover {
  color: var(--pf-theme--color--white, #fff);
}

.pf-bar a.cta:not(.primary):not(.secondary)::after {
  background-image: url("data:image/svg+xml,%3Csvg fill='white' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 31.56 31.56' %3E%3Cpath d='M15.78 0l-3.1 3.1 10.5 10.49H0v4.38h23.18l-10.5 10.49 3.1 3.1 15.78-15.78L15.78 0z'%3E%3C/path%3E%3C/svg%3E");
}

.pf-bar a.cta:hover:not(.primary):not(.secondary)::after {
  translate: 6px;
}


.logo-bar {
  --pf-navigation--Height--actual: 70px;
  display: flex;
  align-items: center;
  gap: 1em;
  height: 4.375rem; /* old: 3.75rem */
  padding-inline-start: var(--pf-c-masthead--PaddingLeft, var(--pf-c-masthead--inset, 24px));
  padding-inline-end: var(--pf-c-masthead--PaddingRight, var(--pf-c-masthead--inset, 24px));
  padding-block-start: 8px;
  padding-block-end: 8px;
  color: white;
  background: var(--pf-theme--color--accent, #0066cc);
}

.logo-bar > a {
  display: flex;
  align-items: center;
  color: white;
  text-decoration: none;
  font-size: 1.25rem;
  font-weight: bold;
  margin-left: calc(1.5rem + 16px);
  height: 100%;
}

.logo-bar > a img {
  display: none;
  height: 100%;
}

#docs-versions-dropdown {
  margin-inline-start: auto;
  --pf-dropdown--Color: white;
}

.component-preview {
  margin-bottom: 64px !important;
}

.component-preview--container {
  position: relative;
}

.component-preview h3 {
  margin-bottom: 0;
}

.component-preview:hover .overlay {
  display: flex;
}

.overlay {
  display: none;

  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #eeeeeecc;

  /* display: flex; */
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}

.overlay > .cta,
.overlay > a {
  margin-bottom: 16px;
}

.overlay > .cta.wind {
  background-color: white;
}


.preview-image {
  height: 250px;
  background-size: 90%;
  background-repeat: no-repeat;
  background-position: center;
  border: 1px solid #d2d2d2;
  border-radius: 3px;
}
/* ... */

